--- a/EP2/exercicio1.html
+++ b/EP2/exercicio1.html
@@ -6,7 +6,7 @@
     <title>Exercício 1</title>
 </head>
 <body>
-    <ul>
+    <ul> <!-- Meio certo (0,5) - Usou listas aninhadas mas a lista errada (não ordenada) -->
         <li>1. Fechar Contrato</li>
         <li>2. Análise de sistema.</li>
         <li>
