--- a/EP2/exercicio4.html
+++ b/EP2/exercicio4.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Mariana Fagundes-1701470">
 </head>
 <body>
-    <p>
+    <p><!-- Correto 1,0 -->
         <div style="color: blue">
             Quando eu for, um dia desses, <br>
             Poeira ou folha levada <br>
