--- a/EP2/exercicio5.html
+++ b/EP2/exercicio5.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Felipe Almeida-1700164">
     <meta name="author" content="Mariana Fagundes-1701470">
 </head>
-<body>
+<body> <!-- Meio certo 0,5 - faltaram algumas palavras em itálico -->
     <p>
         Durante a nossa vida: <br>
         Conhecemos pessoas que <strong>vêm</strong> e que <strong>ficam</strong>, <br>
