--- a/EP2/exercicio2.html
+++ b/EP2/exercicio2.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Felipe Almeida-1700164">
     <meta name="author" content="Mariana Fagundes-1701470">
 </head>
-<body>
+<body><!-- Correto 1,0 -->
     <ol>
         <li>Titanic</li>
         <li>Meu primeiro amor</li>
