--- a/EP2/exercicio3.html
+++ b/EP2/exercicio3.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Mariana Fagundes-1701470">
 </head>
 <body>
-<table border="1px">
+<table border="1px"><!-- Correto 1,0 -->
     <tr>
         <th colspan="6">Time Table</th>
     </tr>
